uncomment publishing code

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -26,17 +26,17 @@ jobs:
         run: make publish-dev
       - name: Get version
         run: echo "PKG_VERSION=$(uv version --short)" >> $GITHUB_ENV
-      # - name: gh release create
-      #   env:
-      #     GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   # https://github.com/cli/cli/issues/2067#issuecomment-704224994
-      #   run: |
-      #     sed -n '/^## ${{ env.PKG_VERSION }}/,/^## /p' CHANGELOG.md | sed '1d;$d' | \
-      #     gh release create ${{ env.PKG_VERSION }} \
-      #       -t ${{ env.PKG_VERSION }} \
-      #       -F - \
-      #       dist/*
-      # - name: Publish to PyPI
-      #   run: make publish
-      # - name: Test Published Package
-      #   run: make publish-test
+      - name: gh release create
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        # https://github.com/cli/cli/issues/2067#issuecomment-704224994
+        run: |
+          sed -n '/^## ${{ env.PKG_VERSION }}/,/^## /p' CHANGELOG.md | sed '1d;$d' | \
+          gh release create ${{ env.PKG_VERSION }} \
+            -t ${{ env.PKG_VERSION }} \
+            -F - \
+            dist/*
+      - name: Publish to PyPI
+        run: make publish
+      - name: Test Published Package
+        run: make publish-test
