--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -6,7 +6,7 @@ on:
       - "docs/**"
       - "src/pyticktick/**"
       - "mkdocs.yml"
-      - ".github/workflows/mkdocs.yml"
+      - ".github/workflows/docs.yml"
   workflow_dispatch:
 
 permissions:
