restore ruff linting rules

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,17 +109,7 @@ docstring-code-format = true
 [tool.ruff.lint.per-file-ignores]
 "**/__init__.py" = ["D104"]
 "src/pyticktick/models/*" = ["ANN401", "E501"]
-"tests/*" = [
-    "ANN",
-    "D",
-    "INP",
-    "C901",
-    "FBT001",
-    "PLR0913",
-    "PLR2004",
-    "S101",
-    "SLF001",
-]
+"tests/*" = ["ANN", "D", "INP", "C901", "PLR0913", "PLR2004", "S101", "SLF001"]
 
 # Remove this after rules are added to ruff
 # https://github.com/astral-sh/ruff/issues/12434
