--- a/pyproject.toml
+++ b/pyproject.toml
@@ -136,7 +136,23 @@ venv = ".venv"
 [tool.mypy]
 plugins = ["pydantic.mypy"]
 strict = true
-exclude = ["tests/"]
+
+# Switch all rules to `strict = false` after
+# https://github.com/python/mypy/issues/11401
+[[tool.mypy.overrides]]
+module = ["tests.*"]
+disallow_any_generics = false
+disallow_subclassing_any = false
+disallow_untyped_calls = false
+disallow_untyped_defs = false
+disallow_incomplete_defs = false
+check_untyped_defs = false
+disallow_untyped_decorators = false
+warn_unused_ignores = false
+warn_return_any = false
+no_implicit_reexport = false
+strict_equality = false
+extra_checks = false
 
 [tool.coverage.run]
 relative_files = true
