complete draft of 3 different auth methods, with v1 and v2 differences

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -9,8 +9,9 @@ nav:
           - Generate a V1 Token: guides/ticktick_api/generate_v1_token.md
       - Cookbook:
           - Settings:
-              - Set V1 Secrets: guides/cookbook/settings/set_v1_secrets.md
-              - Set V2 Username and Password: guides/cookbook/settings/set_v2_username_and_password.md
+              - Authenticate Client via Python: guides/cookbook/settings/authenticate_client_via_python.md
+              - Authenticate Client via Env Vars: guides/cookbook/settings/authenticate_client_via_env_vars.md
+              - Authenticate Client via Dotenv: guides/cookbook/settings/authenticate_client_via_dotenv.md
           - Tasks:
               - Create a Basic Task: guides/cookbook/tasks/create_a_basic_task.md
               - Update a Basic Task: guides/cookbook/tasks/update_a_basic_task.md
