update to new version of ruff

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -117,9 +117,11 @@ docstring-code-format = true
 style = "google"
 exclude = "tests/"
 select = ["DOC", "PYD"]
-ignore = [
-    "DOC201", # all obsoleted by ruff
+ignore = [ # all obsoleted by ruff
+    "DOC105",
+    "DOC201",
     "DOC202",
+    "DOC203",
     "DOC402",
     "DOC403",
     "DOC501",
