--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ dev = [
     "ruff>=0.11.2",
     "mkdocs-autorefs>=1.4.1",
     "pydantic-2-mermaid>=0.7.3",
+    "eval-type-backport>=0.2.2",
 ]
 mypy = [
     "mypy>=1.15.0",
