--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -45,12 +45,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-      - name: install uv
-        run: make install-uv
-      - name: install python
-        run: make install-python
-      - name: Install dependencies
-        run: make install
+      - name: Install uv, python, and dependencies
+        run: make install-all
 
       - name: Run linting via pre-commit
         run: make lint
@@ -78,11 +74,10 @@ jobs:
         python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-      - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5
-        with:
-          python-version: ${{ matrix.python-version }}
       - name: install uv
         run: make install-uv
+      - name: install python
+        run: uv python install ${{ matrix.python-version }}
       - name: Install dependencies
         run: make install
 
@@ -108,14 +103,8 @@ jobs:
       cancel-in-progress: false
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-      - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5
-        with:
-          python-version: 3.13
-      - name: install uv
-        run: |
-          make install-uv
-      - name: Install dependencies
-        run: make install
+      - name: Install uv, python, and dependencies
+        run: make install-all
 
       - name: Run integration tests
         run: make test-integration
@@ -140,14 +129,8 @@ jobs:
     needs: [unit-test, integration-test]
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-      - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5
-        with:
-          python-version: 3.13
-      - name: install uv
-        run: |
-          make install-uv
-      - name: Install dependencies
-        run: make install
+      - name: Install uv, python, and dependencies
+        run: make install-all
 
       - name: Download coverage files
         uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4
@@ -181,14 +164,8 @@ jobs:
     if: github.event_name == 'pull_request'
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
-      - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5
-        with:
-          python-version: 3.13
-      - name: install uv
-        run: |
-          make install-uv
-      - name: Install dependencies
-        run: make install
+      - name: Install uv, python, and dependencies
+        run: make install-all
 
       - name: Download coverage data
         uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4
