--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -25,13 +25,8 @@ jobs:
         run: |
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-      - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5
-        with:
-          python-version: 3.11
-      - name: install uv
-        run: make install-uv
-      - name: Install mkdocs dependencies
-        run: make install
+      - name: Install uv, python, and dependencies
+        run: make install-all
       - name: Build the site
         if: github.ref != 'refs/heads/main'
         run: make mkdocs-check
