--- a/pyproject.toml
+++ b/pyproject.toml
@@ -160,5 +160,8 @@ extra_checks = false
 [tool.coverage.run]
 relative_files = true
 
+[tool.coverage.report]
+exclude_also = ["if TYPE_CHECKING:"]
+
 [tool.typos.default]
 extend-ignore-words-re = ["ba", "ser_*", "extenal_*", "Fo"]
