add guide for totp secret

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -12,6 +12,7 @@ nav:
               - Authenticate Client via Python: guides/cookbook/settings/authenticate_client_via_python.md
               - Authenticate Client via Env Vars: guides/cookbook/settings/authenticate_client_via_env_vars.md
               - Authenticate Client via Dotenv: guides/cookbook/settings/authenticate_client_via_dotenv.md
+              - Authenticate Client with 2FA: guides/cookbook/settings/authenticate_client_with_2fa.md
           - Tasks:
               - Create a Basic Task: guides/cookbook/tasks/create_a_basic_task.md
               - Update a Basic Task: guides/cookbook/tasks/update_a_basic_task.md
