--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,10 +18,11 @@ repos:
       - id: mdformat
         # Do not switch to mdformat --exclude until: https://github.com/hukkin/mdformat/issues/489
         exclude: |
-          (?x)(
-            ^docs/CODE_OF_CONDUCT\.md$ |
-            ^docs/reference/.*\.md$
-          )
+          (?x)^(
+            docs/CODE_OF_CONDUCT\.md |
+            docs/reference/.*\.md |
+            \.github/.*\.md
+          )$
         additional_dependencies:
           - mdformat-mkdocs
           - mdformat-footnote
@@ -29,6 +30,10 @@ repos:
     rev: v0.46.0
     hooks:
       - id: markdownlint-fix
+        exclude: |
+          (?x)^(
+            \.github/.*\.md
+          )$
   - repo: https://github.com/crate-ci/typos
     rev: v1.40.0
     hooks:
@@ -88,7 +93,7 @@ repos:
         language: system
         files: |
           (?x)^(
-            docs/CHANGELOG\.md
-            |pyproject.toml
+            docs/CHANGELOG\.md |
+            pyproject.toml
           )$
         pass_filenames: false
